# data

./: .gitignore  LICENSE  README.md  VERSION  pyproject.toml
data/fcmcf/: c100_400_10_F_L_10.txt  c100_400_10_F_T_10.txt  c100_400_10_V_L_10.txt  c100_400_30_F_L_10.txt  c100_400_30_F_T_10.txt  c100_400_30_V_T_10.txt  c25_100_10_F_L_5.txt  c25_100_10_F_T_5.txt  c25_100_10_V_L_5.txt  c25_100_30_F_L_5.txt  c25_100_30_F_T_5.txt  c25_100_30_V_T_5.txt  c33.txt  c35.txt  c36.txt  c37.txt  c38.txt  c39.txt  c40.txt  c41.txt  c42.txt  c43.txt  c44.txt  c45.txt  c46.txt  c47.txt  c48.txt  c49.txt  c50.txt  c51.txt  c52.txt  c53.txt  c54.txt  c55.txt  c56.txt  c57.txt  c58.txt  c59.txt  c60.txt  c61.txt  (+165 more)
data/linerlib/: Baltic-All-10_complete.txt  Baltic_best_base_complete.txt  Baltic_best_high_32766_3_complete.txt  Baltic_best_low_30827_3_complete.txt  EuropeAsia-All-2_complete.txt  EuropeAsia_pid_26674_12_complete.txt  EuropeAsia_pid_26999_11_low_best_complete.txt  EuropeAsia_pid_824_4_best_high_complete.txt  Med_base_best_complete.txt  Med_high_best_5840_1_complete.txt  Med_low_best_12808_11_complete.txt  Mediterranean-All-3_complete.txt  Pacific-All-3_complete.txt  Pacific_28043_5_low_best_complete.txt  Pacific_base_best_complete.txt  Pacific_high_best_30600_4_complete.txt  WAF-All-2_complete.txt  WAF_base_best_complete.txt  WAF_high_best_pid_21672_3_complete.txt  WAF_low_best_16089_10_complete.txt  WorldLarge-All-5_complete.txt  WorldSmall-All-5_complete.txt  WorldSmall_Best_Base_complete.txt  WorldSmall_high_best_12848_1_complete.txt  (+1 more)
data/mcf/: grid1.txt  grid10.txt  (+24 more)
(+390 files in other folders)
